--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 		<script src="js/vendor/jquery-1.10.1.min.js"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src='http://127.0.0.1:3000/socket.io/socket.io.js'></script>
+		<script src='http://127.0.0.1:3001/style-injector-client.min.js'></script>
 	</body>
 </html>
