completed usemin for html

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
+		<!-- build:css css/all.min.css -->
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<!-- endbuild -->
+
+
 
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	</head>
@@ -18,11 +22,12 @@
 		<h2 class="set">Set..</h2>
 		<h1 class="go">Go!</h1>
 
-
+		<!-- build:js js/all.min.js -->
 		<script src="js/vendor/jquery-1.10.1.min.js"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
 		<script src='http://127.0.0.1:3000/socket.io/socket.io.js'></script>
 		<script src='http://127.0.0.1:3001/style-injector-client.min.js'></script>
+		<!-- endbuild -->
 	</body>
 </html>
