deleted all the stuff and made things fresh. moved sass file

--- a/src/index.html
+++ b/src/index.html
@@ -18,120 +18,9 @@
 	</head>
 	<body>
 
-		<div class="wrapper">
-			<header class="top-header">
-				<div class="logo">
-					<img src="img/logo.jpg" alt="Linsyx Energy">
-				</div>
-				<div class="social-media">
-					<a href="javascript:void" class="twitter"></a>
-					<a href="javascript:void" class="facebook"></a>
-					<a href="javascript:void" class="google"></a>
-				</div>
-				<div class="call">
-					<p><span class="emphasize">Call us: </span> <a href="tel:18009663670" class="tel">1.800.966.3670</a></p>
-				</div>
-				<nav class="main-nav">
-					<a href="javascript:void">Products</a>
-					<a href="javascript:void">Why Induction</a>
-					<a href="javascript:void">Contact</a>
-				</nav>
-			</header>
-			<section class="super-banner">
-				<div class="inner-wrapper">
-					<h1 class="pitch">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-					<a href="javascript:void" class="btn btn-brand">View Products</a>
-					<a href="javascript:void" class="btn btn-brand-secondary">Learn More</a>
-				</div>
-			</section>
-			<section class="product-section">
-				<div class="inner-wrapper">
-					<nav class="product-nav">
-						<a href="javascript:void" class="active">Featured</a>
-						<span class="separator">/</span>
-						<a href="javascript:void">Indoor Lighting</a>
-						<span class="separator">/</span>
-						<a href="javascript:void">Outdoor Lighting</a>
-						<span class="separator">/</span>
-						<a href="javascript:void">Street Lights</a>
-					</nav>
-					<ol class="breadcrumb">
-						<li><a href="javascript:void">Featured</a></li>
-					</ol>
-					<aside class="search">
-						<form role="form" class="form-inline">
-								<input type="email" class="form-control" placeholder="search...">
-						</form>
-					</aside>
-					<div class="clear"></div>
-					<section class="product-list">
-						<figure class="product">
-							<img src="http://placekitten.com/250/200" alt="Product Description">
-							<figcaption class="info">
-								<p class="name">Product Name</p>
-								<p class="type">Type</p>
-							</figcaption>
-						</figure>
-						<figure class="product">
-							<img src="http://placekitten.com/250/200" alt="Product Description">
-							<figcaption class="info">
-								<p class="name">Product Name</p>
-								<p class="type">Type</p>
-							</figcaption>
-						</figure>
-						<figure class="product">
-							<img src="http://placekitten.com/250/200" alt="Product Description">
-							<figcaption class="info">
-								<p class="name">Product Name</p>
-								<p class="type">Type</p>
-							</figcaption>
-						</figure>
-						<figure class="product">
-							<img src="http://placekitten.com/250/200" alt="Product Description">
-							<figcaption class="info">
-								<p class="name">Product Name</p>
-								<p class="type">Type</p>
-							</figcaption>
-						</figure>
-						<figure class="product">
-							<img src="http://placekitten.com/250/200" alt="Product Description">
-							<figcaption class="info">
-								<p class="name">Product Name</p>
-								<p class="type">Type</p>
-							</figcaption>
-						</figure>
-						<ul class="pagination pagination-sm">
-							<li><a href="javascript:void">&laquo;</a></li>
-							<li><a href="javascript:void">1</a></li>
-							<li><a href="javascript:void">2</a></li>
-							<li><a href="javascript:void">3</a></li>
-							<li><a href="javascript:void">4</a></li>
-							<li><a href="javascript:void">&raquo;</a></li>
-						</ul>
-					</section>
-				</div>
-			</section>
-			<footer class="main-footer">
-				<div class="inner-wrapper">
-					<nav class="footer-nav">
-						<a href="javascript:void" class="header">Company</a>
-						<a href="javascript:void">Linsyx Energy</a>
-						<a href="javascript:void">FAQs</a>
-						<a href="javascript:void">Contact</a>
-					</nav>
-					<nav class="footer-nav">
-						<a href="javascript:void" class="header">More</a>
-						<a href="javascript:void">Why Induction</a>
-						<a href="javascript:void">Products</a>
-					</nav>
-					<div class="clear"></div>
-					<p class="copywrite">
-						Copyright © 2013. Linsyx Energy Services Co Inc. An Esco(Energy Service Company). All rights reserved.
-					</p>
-				</div>
-
-			</footer>
-		</div>
+		<p class="ready">Ready</p>
+		<p class="set">Set</p>
+		<p class="go">Go!</p>
 
 
 		<!-- build:js js/all.min.js -->
