changed default typography in jeet, added better organization for sass

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
 	</head>
 	<body>
 
-		<p class="ready">Ready</p>
-		<p class="set">Set</p>
-		<p class="go">Go!</p>
+		<h3 class="ready">Ready</h3>
+		<h2 class="set">Set</h2>
+		<h1 class="go">Go!</h1>
 
 
 		<!-- build:js js/all.min.js -->
