--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,9 @@
 		<!-- build:css css/all.min.css -->
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="vendor/Font-Awesome/css/font-awesome.css">
 		<!-- endbuild -->
-
-
-
+		
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	</head>
 	<body>
