added useref to build system. changed names in core

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
-		<!-- build:css css/all.min.css -->
+		<!-- build:css /css/minified.css -->
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="vendor/Font-Awesome/css/font-awesome.css">
@@ -22,12 +22,10 @@
 		<h1 class="go">Go!</h1>
 
 
-		<!-- build:js js/all.min.js -->
+		<!-- build:js /js/minified.js -->
 		<script src="js/vendor/jquery-1.10.1.min.js"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src='http://127.0.0.1:3000/socket.io/socket.io.js'></script>
-		<script src='http://127.0.0.1:3001/style-injector-client.min.js'></script>
 		<!-- endbuild -->
 	</body>
 </html>
