--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,13 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Site Title</title>
-		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
+		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- build:css /css/minified.css -->
-		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="vendor/Font-Awesome/css/font-awesome.css">
 		<!-- endbuild -->
-		
-		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	</head>
 	<body>
 
@@ -21,11 +18,10 @@
 		<h2 class="set">Set</h2>
 		<h1 class="go">Go!</h1>
 
-
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<!-- build:js /js/minified.js -->
-		<script src="js/vendor/jquery-1.10.1.min.js"></script>
-		<script src="js/vendor/bootstrap.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/app.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
