--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" ng-app="App">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,12 +14,13 @@
 	</head>
 	<body>
 
-		<h3 class="ready">Ready</h3>
-		<h2 class="set">Set</h2>
-		<h1 class="go">Go!</h1>
-
+		<div class="container theme-brand" ng-controller="main-controller">
+			<h3 class="ready">Ready</h3>
+			<h2 class="set">Set</h2>
+			<h1 class="go">Go!</h1>	
+		</div>
 		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
 		<!-- build:js /js/minified.js -->
 		<script src="js/app.js"></script>
 		<!-- endbuild -->
