--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 		</div>
 		
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
 		<!-- build:js /js/minified.js -->
 		<script src="js/app.js"></script>
 		<!-- endbuild -->
